# cyber-test

./: .env_example  .env_example_for_docker  Dockerfile  README.md  docker-compose-local.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  setup.cfg
config/: settings.py  settings_local.py  urls.py
config/components/: application_definition.py  base.py  database.py  database_local.py  debug.py  debug_local.py  media_and_static.py  rest_framework.py  users.py
todo_list/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todo_list/migrations/: 0001_initial.py  0002_alter_job_options.py
todo_list/tests/: conftest.py  factories.py  test_doc.py  test_job_api.py  test_task_api.py  test_token_api.py  test_user_api.py
